--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -14,3 +14,20 @@ body { padding: 0; margin: 0 }
 #unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
 #unity-fullscreen-button { float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
+#myImage{ display: none;
+    max-width: 100%; 
+    max-height: 100vh;
+    position: absolute;
+    z-index: 9999;
+}
+#myImage2{
+    display: none;
+    margin: 0;
+    padding: 0;
+    z-index: 9998;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    max-height: 100%;
+}
